Some refactoring and updates done for 1.16.5.